--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -27,3 +27,12 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .social {
+    a {
+      height: 25px;
+      width: 25px;
+    }
+  }
+}
