--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -39,3 +39,13 @@ $subheading-letter-spacing: 5px;
 
 $paragraph-one-size: 1rem;
 $paragraph-two-size: 0.75rem;
+
+// sizes - mobile
+
+$heading-size-mobile: 3rem;
+$heading-letter-spacing-mobile: 2px;
+$subheading-size-mobile: 2rem;
+$subheading-letter-spacing-mobile: 2px;
+
+$paragraph-one-size-mobile: 0.875rem;
+$paragraph-two-size-mobile: 0.5rem;
