--- a/src/components/common/tooltip/tooltip.scss
+++ b/src/components/common/tooltip/tooltip.scss
@@ -49,3 +49,10 @@
     transform: scale(0);
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .tooltip {
+    top: -60px;
+    left: -175px;
+  }
+}
