--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -92,3 +92,29 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .header {
+    width: 100%;
+    margin: 0;
+
+    &-cta {
+      display: none;
+    }
+
+    &-toggle {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      button {
+        > div {
+          &:last-child {
+            transform-origin: center;
+          }
+        }
+      }
+    }
+  }
+}
