--- a/src/components/about-me/about-me.scss
+++ b/src/components/about-me/about-me.scss
@@ -38,8 +38,8 @@
 
       &-pin {
         position: absolute;
-        top: 67%;
-        right: 42%;
+        top: 71%;
+        right: 38%;
         width: 25px;
         height: 25px;
         border-radius: 50%;
@@ -407,5 +407,135 @@
 
   100% {
     transform: scaleY(1);
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .about-me {
+    width: 100%;
+    margin: 150px 0;
+
+    &--first {
+      margin-top: 50px;
+
+      &-map {
+        transform: translate(50px, -50px);
+
+        img {
+          width: 320px;
+        }
+      }
+
+      &-red {
+        flex-direction: column-reverse;
+
+        img {
+          width: 100%;
+        }
+
+        &--text {
+          text-align: center;
+          margin: 50px 0;
+        }
+      }
+
+      &-green {
+        flex-direction: column;
+
+        img {
+          width: 100%;
+          transform: translateY(0);
+        }
+
+        &--text {
+          text-align: center;
+          margin: 50px 0;
+        }
+      }
+    }
+
+    &--second {
+      flex-direction: column-reverse;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--third {
+      margin-top: 50px;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 100%;
+      }
+
+      &-line {
+        height: 200px;
+        margin-top: 25px;
+      }
+
+      &-text {
+        width: 90%;
+        align-items: center;
+        text-align: center;
+      }
+    }
+
+    &--four {
+      transform: translateY(0);
+
+      p {
+        font-size: 1.5rem;
+        margin: 50px 0;
+        text-align: center;
+      }
+    }
+
+    &--final {
+      margin: 75px 0;
+      overflow-x: hidden;
+
+      &-container {
+        width: 200px;
+        height: 200px;
+      }
+
+      &-item {
+        transform: rotateY(calc(var(--i) * 45deg))
+          translateZ(241px);
+
+        &-text {
+          max-width: 90px;
+
+          p {
+            font-size: $paragraph-one-size-mobile;
+          }
+        }
+      }
+    }
+
+    &--cta {
+      height: 400px;
+
+      h2 {
+        width: 90%;
+        font-size: 3rem;
+      }
+    }
   }
 }
