--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,13 +9,13 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  padding-bottom: 100px;
+  padding-top: 100px;
 
   &-underline {
     align-self: flex-start;
     width: 100%;
     height: 2px;
-    background-color: $highlight-color;
+    background-color: $secondary-color;
     border-radius: 8px;
   }
 
@@ -176,5 +176,43 @@
 
   100% {
     transform: scaleX(0);
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
+  .footer {
+    height: 530px;
+    margin-top: 50px;
+    padding-top: 0;
+    align-items: center;
+    justify-content: space-between;
+
+    &-left {
+      width: 100%;
+
+      &--top {
+        width: 100%;
+        align-items: center;
+
+        &-title {
+          flex-direction: column;
+          width: 100%;
+          margin-bottom: 25px;
+        }
+
+        &-links {
+          width: auto;
+
+          .social {
+            width: 150px;
+          }
+        }
+      }
+
+      &--copyright {
+        width: 100%;
+        text-align: center;
+      }
+    }
   }
 }
