--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -96,6 +96,7 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .header {
     width: 100%;
+    height: 175px;
     margin: 0;
 
     &-cta {
@@ -107,6 +108,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-right: 0;
 
       button {
         > div {
