--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -164,17 +164,21 @@
     &-social,
     &-cta {
       display: inherit;
-      width: 100%;
       height: 50px;
     }
 
     &-social {
+      width: 100%;
+
       .social {
         justify-content: space-evenly;
       }
     }
 
     &-cta {
+      svg {
+        display: none;
+      }
     }
 
     &-separator {
