--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -48,8 +48,6 @@
   }
 
   &-toggle {
-    margin-right: 1.5rem;
-
     button {
       cursor: pointer;
       display: flex;
@@ -72,12 +70,16 @@
 
         &:last-child {
           transform: scaleX(0.5);
-          transform-origin: left;
+          transform-origin: right;
         }
       }
     }
 
     .clicked {
+      button {
+        padding: inherit;
+      }
+
       div:first-child {
         transform: rotate(45deg);
         transform-origin: left top;
@@ -95,28 +97,10 @@
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .header {
-    width: 100%;
-    height: 175px;
-    margin: 0;
-
-    &-cta {
-      display: none;
-    }
+    height: 100px;
 
     &-toggle {
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       margin-right: 0;
-
-      button {
-        > div {
-          &:last-child {
-            transform-origin: center;
-          }
-        }
-      }
     }
   }
 }
