--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -732,6 +732,7 @@
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .work {
     padding-bottom: 0;
+    margin-top: 120px;
 
     &-card {
       width: 100%;
@@ -772,6 +773,19 @@
           video {
             width: 100%;
             height: 350px;
+          }
+        }
+
+        &-bg {
+          height: 500px;
+
+          img {
+            object-fit: cover;
+          }
+
+          &--top-gradient,
+          &--bottom-gradient {
+            height: 100px;
           }
         }
       }
