--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -87,21 +87,14 @@
       transform: translateY(150px);
       opacity: 0;
       z-index: 1;
-
-      &:hover {
-        .hero-image--overlay {
-          display: inherit;
-        }
-      }
     }
 
     &--overlay {
-      display: none;
       width: 100%;
       position: absolute;
       top: 0;
       left: 0;
-      clip-path: circle(150px at var(--x, 0) var(--y, 0));
+      clip-path: circle(20px at var(--x, 0) var(--y, 0));
       transition: all 0.8s linear;
       z-index: 1;
 
@@ -475,6 +468,10 @@
 
     &-image {
       width: 300px;
+
+      &--overlay {
+        display: none;
+      }
     }
 
     &-links {
