--- a/src/components/mouse-follow/mouse-follow.scss
+++ b/src/components/mouse-follow/mouse-follow.scss
@@ -1,14 +1,28 @@
 @import '../../utils/variables';
 
 .mouse-follow {
-  position: relative;
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  top: var(--x, 0);
-  left: var(--y, 0);
-  border: 1px solid $highlight-color;
-  border-radius: 50%;
-  pointer-events: none;
-  z-index: 100;
+  &--point,
+  &--border {
+    position: absolute;
+    top: var(--x, 0);
+    left: var(--y, 0);
+    border-radius: 50%;
+  }
+
+  &--point {
+    height: 10px;
+    width: 10px;
+    background-color: $secondary-color;
+    pointer-events: none;
+    z-index: 101;
+  }
+
+  &--border {
+    width: 50px;
+    height: 50px;
+    pointer-events: none;
+    border: 1px solid $highlight-color;
+    background-color: transparent;
+    z-index: 100;
+  }
 }
