--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,8 @@ body {
   color: $secondary-color;
   background-color: $primary-color;
 
+  cursor: none;
+
   #root {
     width: 100%;
     height: 100%;
