--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -83,10 +83,13 @@
 
     img {
       width: 100%;
-      filter: contrast(110%);
       transform: translateY(150px);
       opacity: 0;
       z-index: 1;
+    }
+
+    &--cover {
+      filter: contrast(90%);
     }
 
     &--overlay {
@@ -95,6 +98,7 @@
       left: 0;
       clip-path: circle(20px at var(--x, 0) var(--y, 0));
       transition: all 0.8s linear;
+      filter: invert(30%);
       z-index: 1;
 
       &:hover {
