fix(styles): update variable names

--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -154,7 +154,7 @@
       &--item {
         &-container {
           a {
-            font-size: $subheading-size-mobile;
+            font-size: $heading-two-size-mobile;
           }
         }
       }
