--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -465,7 +465,7 @@
 
     &-title {
       h1 {
-        font-size: $heading-size-mobile;
+        font-size: $heading-one-size-mobile;
       }
     }
 
