--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -6,26 +6,31 @@
   left: 0;
   width: 100%;
   height: 1050px;
-  background-image: url('../../assets/images/berlin.png');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: right;
-  filter: grayscale(100%);
-  -webkit-filter: grayscale(100%);
-  opacity: 0.3;
-  z-index: -1;
 
-  &--gradient {
+  &--gradient,
+  &--load-image {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 1050px;
-    z-index: -1;
+    height: 100%;
+  }
+
+  &--gradient {
     background: linear-gradient(
       transparent,
       $primary-color
     );
+    z-index: 1;
+  }
+
+  &--load-image {
+    object-fit: cover;
+    object-position: right;
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    opacity: 0.3;
+    z-index: -1;
   }
 }
 
@@ -37,6 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
+  z-index: 2;
 
   &-title {
     width: 464px;
