--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -6,10 +6,12 @@
   padding-bottom: 200px;
 
   &-title {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 2;
 
     h2 {
       font-weight: bold;
@@ -777,21 +779,14 @@
         height: 500px;
 
         &-image {
-          img {
-            width: inherit;
-          }
-
-          video {
-            width: 100%;
-          }
-
           img,
           video {
+            width: 100%;
             height: 350px;
           }
 
           &--order {
-            transform: translate(-70px, -70px);
+            transform: translate(-5px, -60px);
           }
         }
 
@@ -821,6 +816,9 @@
 
             &-more {
               &-expand {
+                height: fit-content;
+                padding-top: 25px;
+                padding-bottom: 25px;
                 width: 220px;
               }
             }
