fix(styles): remove mouse follow with css

--- a/src/components/mouse-follow/mouse-follow.scss
+++ b/src/components/mouse-follow/mouse-follow.scss
@@ -26,3 +26,12 @@
     z-index: 100;
   }
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .mouse-follow {
+    &--point,
+    &--border {
+      display: none;
+    }
+  }
+}
