--- a/src/components/about-me/about-me.scss
+++ b/src/components/about-me/about-me.scss
@@ -133,11 +133,11 @@
     img {
       width: 50%;
       filter: grayscale(100%);
-      transition: all ease-in-out 0.3s;
+      transition: filter ease-in-out 0.3s;
 
       &:hover {
         filter: grayscale(0%);
-        transition: all ease-in-out 0.3s;
+        transition: filter ease-in-out 0.3s;
       }
     }
 
@@ -147,6 +147,7 @@
       flex-direction: column;
       align-items: flex-end;
       justify-content: space-between;
+      clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
 
       p {
         width: 75%;
@@ -200,7 +201,7 @@
     }
 
     &-line {
-      height: 700px;
+      height: 500px;
       width: 2px;
       border-radius: 8px;
       background-color: $highlight-color;
@@ -213,6 +214,79 @@
   }
 
   &--four {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    img {
+      width: 50%;
+    }
+
+    &-text {
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      justify-content: space-between;
+      clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
+
+      p {
+        width: 75%;
+        text-align: end;
+        font-weight: lighter;
+        margin-top: 50px;
+      }
+
+      p:nth-child(3) {
+        font-weight: bold;
+      }
+    }
+
+    &-line {
+      height: 450px;
+      width: 2px;
+      border-radius: 8px;
+      background-color: $highlight-color;
+      margin-top: 50px;
+    }
+  }
+
+  &--five {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    margin-top: 75px;
+
+    img {
+      width: 50%;
+    }
+
+    &-text {
+      height: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-between;
+      clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
+
+      p {
+        width: 75%;
+        text-align: start;
+        font-weight: lighter;
+        margin-top: 50px;
+      }
+    }
+
+    &-line {
+      height: 750px;
+      width: 2px;
+      border-radius: 8px;
+      background-color: $highlight-color;
+      margin-top: 50px;
+    }
+  }
+
+  &--six {
     width: 100%;
     display: flex;
     align-items: center;
@@ -222,7 +296,7 @@
     p {
       width: 80%;
       font-size: 2.5rem;
-      font-weight: lighter;
+      font-weight: bold;
     }
   }
 
@@ -302,8 +376,10 @@
 
 .show-first-about {
   .about-me--first-red {
-    img {
-      animation: show-left 0.5s ease-in forwards;
+    &--image {
+      img {
+        animation: show-left 0.5s ease-in-out forwards;
+      }
     }
 
     &--text {
@@ -315,18 +391,18 @@
 }
 
 .show-second-about {
-  img {
-    animation: show-opac 0.8s ease-in forwards;
-  }
-
   .about-me--second {
+    img {
+      animation: show-opac 0.8s ease-in-out forwards;
+    }
+
     &-text {
       h2 {
-        animation: show-top 0.8s ease-in forwards;
+        animation: show-top 0.8s ease-in-out forwards;
       }
 
       p {
-        animation: show-top 1s ease-in forwards;
+        animation: show-top 1s ease-in-out forwards;
       }
     }
 
@@ -362,7 +438,7 @@
 
 @keyframes show-left {
   0% {
-    transform: translateX(-100%);
+    transform: translateX(-250px);
   }
 
   100% {
@@ -382,7 +458,7 @@
 
 @keyframes show-top {
   0% {
-    transform: translateY(-100%);
+    transform: translateY(-150px);
   }
 
   100% {
@@ -498,14 +574,59 @@
         width: 90%;
         align-items: center;
         text-align: center;
+
+        p:nth-child(3) {
+          font-size: 1.25rem;
+        }
       }
     }
 
     &--four {
+      flex-direction: column-reverse;
+      margin-top: 50px;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--five {
+      flex-direction: column;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--six {
       transform: translateY(0);
 
       p {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
         margin: 50px 0;
         text-align: center;
       }
@@ -540,6 +661,167 @@
         width: 90%;
         font-size: 3rem;
       }
+    }
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .about-me {
+    &--cta {
+      height: 500px;
+
+      h2 {
+        width: 80%;
+      }
+    }
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
+  .about-me {
+    &--first {
+      margin-top: 50px;
+
+      &-map {
+        transform: translate(150px, -150px);
+
+        &-pin {
+          top: 70%;
+          right: 38%;
+        }
+
+        img {
+          width: 550px;
+        }
+      }
+
+      &-red {
+        flex-direction: column-reverse;
+
+        img {
+          width: 100%;
+        }
+
+        &--text {
+          text-align: center;
+          margin: 50px 0;
+        }
+      }
+
+      &-green {
+        flex-direction: column;
+
+        img {
+          width: 100%;
+          transform: translateY(0);
+        }
+
+        &--text {
+          text-align: center;
+          margin: 50px 0;
+        }
+      }
+    }
+
+    &--second {
+      flex-direction: column-reverse;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--third {
+      margin-top: 50px;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+
+      img {
+        width: 100%;
+      }
+
+      &-line {
+        height: 200px;
+        margin-top: 25px;
+      }
+
+      &-text {
+        width: 90%;
+        align-items: center;
+        text-align: center;
+
+        p:nth-child(3) {
+          font-size: 1.25rem;
+        }
+      }
+    }
+
+    &--four {
+      flex-direction: column-reverse;
+      margin-top: 50px;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--five {
+      flex-direction: column;
+
+      img {
+        width: 100%;
+      }
+
+      &-text {
+        align-items: center;
+
+        p {
+          text-align: center;
+        }
+      }
+
+      &-line {
+        height: 200px;
+      }
+    }
+
+    &--six {
+      transform: translateY(0);
+
+      p {
+        font-size: 2rem;
+        margin: 50px 0;
+        text-align: center;
+      }
+    }
+
+    &--final {
+      margin: 350px 0;
     }
   }
 }
