--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -395,15 +395,15 @@
             top: -150%;
             right: 150%;
             width: 400px;
-            height: 150px;
+            height: fit-content;
             border: 1px solid $secondary-color;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-            gap: 20px;
+            gap: 25px;
             background-color: $primary-color;
-            padding: 10px 20px;
+            padding: 25px 20px;
             transform: scale(0);
             transition: all ease-in-out 0.1s;
             z-index: 5;
