--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -7,7 +7,7 @@
   margin-top: 100px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-between;
   padding-top: 100px;
 
@@ -22,7 +22,7 @@
   &-left {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     width: 50%;
@@ -31,10 +31,10 @@
     &--top {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: center;
       justify-content: space-around;
       align-self: center;
-      height: 50%;
+      height: 350px;
       width: 100%;
 
       &-title {
@@ -66,7 +66,7 @@
         }
 
         &--cv {
-          width: 90%;
+          width: 180px;
           display: flex;
           align-items: center;
           justify-content: space-between;
@@ -234,6 +234,24 @@
       &--copyright {
         width: 100%;
         text-align: center;
+      }
+    }
+  }
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
+  .footer {
+    &-left {
+      &--top {
+        &-links {
+          .social {
+            width: 150px;
+          }
+
+          &--cv {
+            width: 180px;
+          }
+        }
       }
     }
   }
