--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -8,3 +8,9 @@
   width: 90%;
   margin: 0 auto;
 }
+
+@media only screen and (min-device-width: 1920px) and (max-device-width: 3840px) {
+  .container {
+    width: 60%;
+  }
+}
