--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -111,3 +111,10 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 1920px) and (max-device-width: 3840px) {
+  .header {
+    width: 60%;
+    margin: 0 20% 0;
+  }
+}
