--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -922,3 +922,15 @@
     }
   }
 }
+
+@media only screen and (min-device-width: 1920px) and (max-device-width: 3840px) {
+  .work {
+    &-card {
+      width: 100%;
+
+      &--top {
+        justify-content: space-around;
+      }
+    }
+  }
+}
