fix(styles): fix work card descrip styles

--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -118,9 +118,9 @@
 
           p {
             line-height: 2;
-            font-size: $paragraph-two-size;
+            font-size: $paragraph-one-size;
             font-weight: lighter;
-            letter-spacing: 1px;
+            letter-spacing: 0;
           }
         }
       }
