--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
 .footer {
   position: relative;
   width: 100%;
-  height: 660px;
+  height: 600px;
   margin-top: 100px;
   display: flex;
   flex-direction: column;
@@ -83,7 +83,8 @@
 
     &--copyright {
       font-weight: lighter;
-      font-size: $paragraph-one-size;
+      font-size: $paragraph-two-size;
+      margin-bottom: 25px;
     }
   }
 }
