--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -84,10 +84,11 @@
             100% 100%,
             0 100%
           );
+          width: 90%;
           height: 80px;
           display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: flex-start;
 
           p {
             font-weight: bold;
@@ -773,6 +774,10 @@
           text-align: center;
           align-items: center;
           justify-content: space-between;
+
+          &--award {
+            justify-content: center;
+          }
 
           h1 {
             margin: 30px 0;
